fix upper white space

--- a/src/assets/jsxc/example/css/example.css
+++ b/src/assets/jsxc/example/css/example.css
@@ -1,7 +1,3 @@
-body {
-   margin-top: 30px;
-}
-
 .logout {
    display: none;
 }
